src/components/TodoItem/TodoItem.css
.TodoItem {
  border: #D9D9D9 1px solid;
  border-radius: 8px;
  padding: 12px 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.TodoItem input[type="checkbox"] {
  margin-right: 12px;
  width: 20px;
  height: 20px;
  accent-color: #2C2C2C;

}

.TodoItem .text {
  font-weight: 400;
  font-size: 16px;
  line-height: 140%;
  color: #1E1E1E;
}


.TodoItem .true {
  text-decoration: line-through;
  color: #757575;
}

.TodoItem .delete_Btn {
  margin: auto;
  margin-right: 0;
  padding: 5px;
}

.TodoItem .delete_Btn img {
  width: 10px;
  height: 10px;
}

